Fix link hidden under header nav

--- a/versions/v6/static/scss/components/_skip-navigation.scss
+++ b/versions/v6/static/scss/components/_skip-navigation.scss
@@ -1,12 +1,12 @@
 .skip-navigation {
   @include sr-only();
   @include sr-only-focusable();
-  box-shadow:.5em .5em 1em rgba(0,0,0,.325);
+  box-shadow: .5em .5em 1em rgba(0,0,0,.325);
 
   &:focus {
     left: $spacer-x;
     position: absolute;
     top: calc(#{$ucf-header-height} + #{$spacer-y});
-    z-index: 4;
+    z-index: 9999;
   }
 }
